--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h2>WINDMILL</h2>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
+
+<html lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>Windmill Testing Framework</title>
+	<script language="JavaScript">
+		var time = null
+		function move() {
+			window.location = 'http://www.getwindmill.com'
+		}
+	//-->
+	</script>
+</head>
+<body onload="timer=setTimeout('move()',1000)">
+
+</body>
+</html>
+
